--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "lucide-react": "^0.561.0",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.10.1",
-    "recharts": "^3.5.1"
+    "react-router-dom": "7.1.3",
+    "lucide-react": "0.460.0",
+    "recharts": "2.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
